--- a/src/components/Home/Create.css
+++ b/src/components/Home/Create.css
@@ -11,20 +11,51 @@
   z-index: 5000;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.80);
+  gap: 20px;
+}
+
+.create-btn-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+}
+
+.create-btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.create-btn {
+  padding: 30px;
+  padding-left: 25px;
+  padding-right:25px;
+  background-color: white;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  margin-bottom: 15px;
+}
+
+.create-label {
+  font-size: 20px;
+  color: var(--text-color);
 }
 
 .create-cancel-btn {
-  font-family: 'Open Sans';
-  margin-top: 15px;
-  font-size: 15px;
-  font-weight: 600;
   color: var(--button-text-color);
-  text-decoration: none;
   padding: 15px;
   background-color: white;
   border-radius: 15px;
   border: none;
   cursor: pointer;
-  transition: hover, 0.2s;
+  transition: background-color 0.2s ease;
+}
+.create-cancel-btn:hover {
+  background-color: var(--login-btn-hover-color);
 }
