--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,35 +1,3 @@
-.gallery-title-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--container-color);
-  border-radius: 15px;
-  padding: 5px;
-  margin-bottom: 20px;
-}
-
-.gallery-page-title {
-  font-family: 'Open Sans';
-  font-size: 25px;
-  text-align: center;
-  margin: none;
-  margin-top: 25px;
-  margin-bottom: 10px;
-  color: black;
-}
-
-.gallery-upload-container {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 15px;
-  padding-right: 15px;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--container-color-2);
-  border-radius: 15px;
-  margin-bottom: 30px;
-}
-
 .gallery-board {
   border-radius: 15px;
   display: grid;
@@ -51,7 +19,23 @@
   border-radius: 15px;
 }
 
-.form-container {
+.gallery-upload-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--container-color);
+  border-radius: 15px;
+  margin-bottom: 30px;
+}
+
+.gallery-form-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -88,4 +72,12 @@
   height: auto;
   object-fit: cover;
   border-radius: 20px;
+}
+
+.post-btn-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
