--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -22,6 +22,11 @@
 .post-header {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .gallery-upload-container {
@@ -57,6 +62,15 @@
   outline: none;
   background-color: transparent;
   color: var(--text-color);
+}
+
+.gallery-avatar {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-right: 10px;
+  transform: translateY(-6px);
 }
 
 .post-title {
